# KinCat

./: README.md
kincatpy/: kincat_event_calc.py  kincatpy.py  kinepy.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  KinCat.hpp  KinCatConfig.cmake.in  KinCat_CommandLineParser.hpp  KinCat_Config.hpp.in  KinCat_Dump.cpp  KinCat_Dump.hpp  KinCat_HDF5.cpp  KinCat_HDF5.hpp  KinCat_Lattice.cpp  KinCat_Lattice.hpp  KinCat_Main.cpp  KinCat_Main_Batch.cpp  KinCat_Main_Util.cpp  KinCat_Main_Util.hpp  KinCat_ProcessCounter.cpp  KinCat_ProcessCounter.hpp  KinCat_ProcessDictionary.cpp  KinCat_ProcessDictionary.hpp  KinCat_SolverBase.cpp  KinCat_SolverBase.hpp  KinCat_SolverBatchRTA.cpp  KinCat_SolverBatchRTA.hpp  KinCat_SolverInternal.hpp  KinCat_SolverSerialRTA.cpp  KinCat_SolverSerialRTA.hpp  KinCat_SolverSublattice.cpp  KinCat_SolverSublattice.hpp  KinCat_Stats.cpp  KinCat_Stats.hpp  KinCat_Test.cpp  KinCat_Util.hpp  input.json
src/core/cmake/: KinCatConfig.cmake.in  KinCat_Config.hpp.in
src/core/cmake/modules/: FindEigen3.cmake  FindKokkos.cmake  FindYAML.cmake
src/examples/: RuO2-dictionary.json  RuO2-rates.json
src/examples/batch/: ex3-input.json  ex4-input.json  ex5-input.json  input-rates-override-RuO2.json  plot-ex3.py  plot-ex4.py  plot-ex5.py  readme.txt
src/examples/kincatpy/: readme.txt  ruo2_input.txt
src/examples/non-batch/: ex1-input.json  ex2-input.json  ex3-input.json  plot-ex1.py  plot-ex2.py  plot-ex3.py  readme.txt
src/sphinx/source/: building-kincat.rst  conf.py  file-format.rst  index.rst  intro.rst  kincat-api.rst  kincat-overview.rst  kincatpy.rst  running-kincat.rst  to-do.rst
src/unit-test/: CMakeLists.txt  KinCat_Test_Driver.cpp  KinCat_Test_JSON.hpp  KinCat_Test_Lattice.hpp  KinCat_Test_Runs.hpp  readme.txt
src/unit-test/later/: KinCat_Test_SymmetryUniqueConfiguration.hpp
src/unit-test/test-files/: input-batch.json  input-rates.json  input.json
