FILE(GLOB KINCAT_HDR 
   KinCat.hpp
   KinCat_CommandLineParser.hpp
   KinCat_Dump.hpp
   KinCat_ProcessCounter.hpp  
   KinCat_ProcessDictionary.hpp
   KinCat_HDF5.hpp
   KinCat_Lattice.hpp
   KinCat_Main_Util.hpp	  
   KinCat_SolverBase.hpp
   KinCat_SolverBatchRTA.hpp
   KinCat_SolverSerialRTA.hpp
   KinCat_SolverSublattice.hpp
   KinCat_Stats.hpp
   KinCat_Util.hpp
)

FILE(GLOB KINCAT_SRC
   KinCat_Dump.cpp	  	  	  	  
   KinCat_ProcessCounter.cpp
   KinCat_ProcessDictionary.cpp
   KinCat_HDF5.cpp
   KinCat_Lattice.hpp
   KinCat_Lattice.cpp
   KinCat_Main_Util.cpp
   KinCat_SolverBase.cpp
   KinCat_SolverBatchRTA.cpp
   KinCat_SolverSerialRTA.cpp
   KinCat_SolverSublattice.cpp
   KinCat_Stats.cpp	  
)

ADD_LIBRARY(kincat STATIC ${KINCAT_SRC})
TARGET_COMPILE_FEATURES(kincat PUBLIC cxx_std_14)
SET_TARGET_PROPERTIES(kincat PROPERTIES PUBLIC_HEADER "${KINCAT_HDR}")
IF (KINCAT_ENABLE_SHARED_BUILD)
  SET_PROPERTY(TARGET kincat PROPERTY POSITION_INDEPENDENT_CODE ON)
ENDIF()

TARGET_LINK_LIBRARIES(kincat
  PUBLIC 
  ${KINCAT_INTERNAL_KOKKOS_TARGET}
)

## Test input file
#SET(KINCAT_FILES "input.json")
#FOREACH(KINCAT_FILE ${KINCAT_FILES} )
#  FILE(COPY ${KINCAT_FILE} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
#  INSTALL(FILES ${KINCAT_FILE} DESTINATION "${KINCAT_INSTALL_BIN_PATH}")
#ENDFOREACH()

# Main executable
SET(KINCAT_MAIN_EXE "kincat.x")
ADD_EXECUTABLE(${KINCAT_MAIN_EXE} KinCat_Main.cpp)
TARGET_LINK_LIBRARIES(${KINCAT_MAIN_EXE} ${KINCAT_LINK_LIBRARIES})
INSTALL(TARGETS ${KINCAT_MAIN_EXE}
        PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE
        DESTINATION "${CMAKE_INSTALL_PREFIX}/${KINCAT_INSTALL_BIN_PATH}")

# Main batch executable
SET(KINCAT_MAIN_EXE "kincat-batch.x")
ADD_EXECUTABLE(${KINCAT_MAIN_EXE} KinCat_Main_Batch.cpp)
TARGET_LINK_LIBRARIES(${KINCAT_MAIN_EXE} ${KINCAT_LINK_LIBRARIES})
INSTALL(TARGETS ${KINCAT_MAIN_EXE}
        PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE
        DESTINATION "${CMAKE_INSTALL_PREFIX}/${KINCAT_INSTALL_BIN_PATH}")

TARGET_INCLUDE_DIRECTORIES(kincat
  PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<BUILD_INTERFACE:${Boost_INCLUDE_DIR}>  
  $<BUILD_INTERFACE:${HDF5_INCLUDE_DIRS}>
  $<INSTALL_INTERFACE:${KINCAT_INSTALL_INCLUDE_PATH}>
)

INSTALL(TARGETS kincat
  EXPORT kincat-targets
  LIBRARY DESTINATION "${KINCAT_INSTALL_LIB_PATH}"
  ARCHIVE DESTINATION "${KINCAT_INSTALL_LIB_PATH}"
  RUNTIME DESTINATION "${KINCAT_INSTALL_BIN_PATH}"  
  INCLUDES DESTINATION "${KINCAT_INSTALL_INCLUDE_PATH}"
  PUBLIC_HEADER DESTINATION "${KINCAT_INSTALL_INCLUDE_PATH}"
)

INSTALL(EXPORT kincat-targets
  DESTINATION "${KINCAT_INSTALL_LIB_PATH}/cmake/KinCat"
  NAMESPACE KinCat::
)

CONFIGURE_PACKAGE_CONFIG_FILE(
  "cmake/KinCatConfig.cmake.in" "${CMAKE_CURRENT_BINARY_DIR}/KinCatConfig.cmake"
  INSTALL_DESTINATION "${KINCAT_INSTALL_LIB_PATH}/cmake/kincat"
)

WRITE_BASIC_PACKAGE_VERSION_FILE(
  "${PROJECT_BINARY_DIR}/kincat-config-version.cmake"
  COMPATIBILITY SameMajorVersion
)

INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/KinCatConfig.cmake"
  DESTINATION "${KINCAT_INSTALL_LIB_PATH}/cmake/kincat"
)

